Regression: Geometry Nodes > Spline Parameter > Factor Output #100258

Closed
opened 2022-08-07 07:33:33 +02:00 by Mark David Bas · 10 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.47

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
Worked: 3.1.2

Caused by f4f89a76a8

Short description of error
Factor output produces unexpected results in Spline Domain.

Exact steps for others to reproduce the error
Open attached .blend file

SplineParameter_factorError.blend

{F13342795, size = full}

{F13342796, size = full}

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.47 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Worked: 3.1.2 Caused by f4f89a76a8 **Short description of error** Factor output produces unexpected results in Spline Domain. **Exact steps for others to reproduce the error** Open attached .blend file [SplineParameter_factorError.blend](https://archive.blender.org/developer/F13342800/SplineParameter_factorError.blend) {[F13342795](https://archive.blender.org/developer/F13342795/spl02.PNG), size = full} {[F13342796](https://archive.blender.org/developer/F13342796/spl01.PNG), size = full}
Author

Added subscriber: @Mave

Added subscriber: @Mave
Mark David Bas changed title from Geometry Nodes > Spline Parameter > Factor Attribute to Geometry Nodes > Spline Parameter > Factor Output 2022-08-07 07:41:38 +02:00

Added subscriber: @mod_moder

Added subscriber: @mod_moder

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

If change the resolution, the error changes. Looks like +-1 index error
Although I'm not sure about it

+Hmm, no, there is still a lot of strange and unknown in the code, but it's not about indexing

++ The error does not decrease with increasing accuracy! It is minimum at minimum precision and is fixed at 100~

If change the resolution, the error changes. Looks like +-1 index error Although I'm not sure about it +Hmm, no, there is still a lot of strange and unknown in the code, but it's not about indexing ++ The error does not decrease with increasing accuracy! It is minimum at minimum precision and is fixed at 100~
Member

Added subscribers: @HooglyBoogly, @lichtwerk

Added subscribers: @HooglyBoogly, @lichtwerk
Member

Caused by f4f89a76a8

CC @HooglyBoogly

Caused by f4f89a76a8 CC @HooglyBoogly
Philipp Oeser changed title from Geometry Nodes > Spline Parameter > Factor Output to Regression: Geometry Nodes > Spline Parameter > Factor Output 2022-08-16 10:25:39 +02:00

Added subscriber: @JacobMerrill-1

Added subscriber: @JacobMerrill-1

Added subscriber: @Vyach

Added subscriber: @Vyach
Iliya Katushenock self-assigned this 2022-08-17 00:06:05 +02:00

This issue was referenced by 5fff6c419c

This issue was referenced by 5fff6c419c54be9eb29a7fae33abd632d0362916
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100258
No description provided.