Fix T100258: wrong spline length used in Spline Parameter node

Differential Revision: https://developer.blender.org/D15705